Zoom/Pan/gotoCoords fixed Smooth zoom is back Code cleanup gotoCoords x/y/xy Nodes get cached only when they are 100% off screen Edges are cached
git-svn-id: file:///var/svn/skp/trunk@59 54603a6e-7c00-409b-81b0-d312d09a75cd

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -310,6 +310,10 @@ ul {
 }
 
 #footer {
+    display:none;
+
+    
+
     height: 82px;
     position:fixed;
     bottom:0px;
